tests/paczka1/small_fuzzy/17993603.err
Error in line 6: LmC A284 51,6
Error in line 7: LmC S750 68,3
